# distribution-level-feature-discovery

./: .gitignore  README.md  pyproject.toml
0_preprocess/: improve_clozes.py  llm_improve_clozes.py  prepare_ambigqa_questions.py  split_dataset.py
1_data_preparation/: format_ambigqa_questions.py  select_test_clozes.py
2_branch_sampling/: sample_branches.py  sample_reasoning_steps.py
3_attribution_graphs/: compute_continuation_attribution.py  compute_reasoning_step_pair_attribution.py
4_feature_extraction/: compute_embeddings.py
5_gaussian_clustering/: README.md  __init__.py  adaptive_control.py  cluster.py  em_loop.py  gpu_utils.py  initialize.py  rd_objective.py  split_stability.py  sweep_utils.py
6_semantic_graphs/: extract_graphs.py
7_validation/: 7a_graph_validation.py  7c_baseline_combined_medoid.py  7c_baseline_kmeans.py  7c_baseline_single.py  7c_cluster_analysis.py  7c_graph.py  7c_hypotheses.py  7c_metrics.py  7c_steering.py  7c_steering_nnsight.py  7c_steering_tl.py  7c_utils.py  analyze_steering_methods.py  csv_to_latex_table.py  extract_tokenwise_logit_diff.py  km_sem.py  rd_medoid.py  select_h4c_manifest.py  select_stage7_clustering_manifest.py  single.py  stage7_prefix_sharding.py
8_visualization/: __init__.py  anneal_beta_exact_k.py  beta_similarity_heatmaps.py  cache_to_latex_table.py  cluster_plots.py  compare_rd_coreg_fixed_rate.py  cross_silhouette_analysis.py  cross_silhouette_histogram.py  find_minimal_beta.py  jaccard_matrix_relabel.py  make_rd_table.py  parameter_sweep_plots.py  rd_curve_compare_kmeans.py  rd_curve_sweep_k.py  (+10 more)
(+182 files in other folders)
