[project]
name = "latent-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime>=4.11,<4.12",
    "circuit-tracer",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tokenizers>=0.22.1",
    "torch>=2.4.0",
    "tqdm>=4.67.1",
    "nnsight==0.6.1",
    "transformer-lens>=2.16.0",
    "transformers>=4.56.0,<=4.57.3",
    "vllm>=0.6.0",
    "pyyaml>=6.0.0",
]

[tool.uv.workspace]
members = [
    "circuit-tracer",
]

[tool.uv.sources]
circuit-tracer = { workspace = true, editable = true }

[tool.pytest.ini_options]
pythonpath = [".", "circuit-tracer"]
